# following_algorithm

./: CMakeLists.txt  package.xml
config/: FollowingAlgorithmParameters.yaml
include/: following_algorithm.h  shoal_of_fish.h  tf_odom_ned.h  thrust_output.h  var_time_const.h
launch/: follow_fishes.launch
log/: PIDtest.bag  moving_shoal_test.bag  step_left_test.bag  step_right_test.bag  step_test.bag
msg/: ActuatorMessage.msg  ControllerKValues.msg  Heartbeat.msg
src/: following_algorithm.cpp  shoal_dropper.cpp  shoal_of_fish.cpp  tf_odom_ned.cpp  thrust_output.cpp  var_time_const.cpp
srv/: get_max_surge_force.srv
